objects/Sales_Person__c.object
<CustomObject>
    <fields>
        <fullName>Addr1__c</fullName>
        <label>Addr1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Name__c</fullName>
        <label>SP Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Code__c</fullName>
        <label>Territory Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Sales Person</label>
    <nameField>
        <label>SalesPerson</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Person</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>